# Yet-Another-Kafka

./: .gitignore  README.md  broker.Dockerfile  consumer_cli.py  docker-compose.yaml  publish.py  publisher.py  pyproject.toml  reader.py  requirements.txt  server.py  zookeeper.Dockerfile
broker/: Dockerfile  __main__.py  broker.py  utils.py
consumer/: __main__.py  cli.py  consumer.py
data_1/0/animals/: 2.txt
data_3/2/animals/: 1.txt
producer/: __main__.py  input.txt  producer.py
zookeeper/: __init__.py  __main__.py  server.py  zookeeper.py
