[tool.poetry]
name = "bd1_009_036_437_900"
version = "0.1.0"
description = "Big Data team project - Yet another Kafka (YaK)"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.10.9"
aio-pika = "^8.2.5"
async-timeout = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
